--- a/app/login/style.css
+++ b/app/login/style.css
@@ -4,18 +4,12 @@
   background-position: initial;
   height: 100vh;
   width: 100vw;
-  z-index: -1;
-  position: relative;
 }
 
 .bg-geometric .overlay {
-  z-index: 1;
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100vh;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 
