--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,24 @@ body {
 .shine {
   box-shadow: 0px 1px 10px 1px rgba(165, 217, 119, 75%);
 }
+
+.bg-geometric {
+  background-image: url(/geometric-background-xs.png);
+  background-size: cover;
+  background-position: initial;
+  height: 100vh;
+  width: 100vw;
+}
+
+.bg-geometric .overlay {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+
+@media screen and (min-width: 744px) {
+  .bg-geometric {
+    background-image: url(/geometric-background-xl.png);
+  }
+}
