--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
 
 body {
   background-color: var(--background);
+  min-height: 110vh;
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
