--- a/app/globals.css
+++ b/app/globals.css
@@ -20,16 +20,9 @@ body {
   background-image: url(/geometric-background-xs.png);
   background-size: cover;
   background-position: initial;
-  height: 100vh;
+  min-height: 110vh;
   width: 100vw;
 }
-
-.bg-geometric .overlay {
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
 
 @media screen and (min-width: 744px) {
   .bg-geometric {
